--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "filesignaturecollectors"
-version = "0.1.0"
+version = "0.1.1"
 description = "Collects, processes and stores information on 'magic numbers'."
 authors = ["kurotom <55354389+kurotom@users.noreply.github.com>"]
 readme = "README.md"
@@ -15,6 +15,7 @@ classifiers = [
 "Programming Language :: Python :: 3.10",
 "Programming Language :: Python :: 3.11"
 ]
+repository = "https://github.com/kurotom/filesignaturecollectors"
 
 [tool.poetry.dependencies]
 python = "^3.7"
@@ -27,3 +28,7 @@ collectfilesignatures = 'filesignaturecollectors.cli:main'
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.poetry.urls]
+"Bug Tracker" = "https://github.com/kurotom/filesignaturecollectors/issues"
+"Pypi" = "https://pypi.org/project/filesignaturecollectors/"
